pendente carrinho e icones

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet">
     <title>TGL</title>
 </head>
 <body>
@@ -25,7 +24,7 @@
     <header>
     <div class="mainContent">
         <div class="gameContent">
-            <h3 class="newBet">NEW BET <span data-js="type"></span></h3>
+            <h3 class="newBet">NEW BET <span class="for" data-js="typeFor"></span></h3>
             <p><strong>Choose a game</strong></p>
             <div class="buttonsArea" data-js="buttonsArea"></div>
             <p><strong>Fill your bet</strong></p>
