finalizado para entrega, avaliação e tira dúvidas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./icons/arrow-right-solid.svg">
     <link rel="stylesheet" href="styles.css">
     <title>TGL</title>
 </head>
@@ -18,10 +17,11 @@
                 </li>
                 <li>
                     <h4>Account</h4>
-                    <h4>Log out</h4>
+                    <h4>Log out <img src="./icons/arrow-right-solid.svg" /></h4>
                 </li>
             </ul>
         </div>
+        <div class="underline"></div>
     <header>
     <div class="mainContent">
         <div class="gameContent">
@@ -37,7 +37,7 @@
                     <button class="gameButton2" data-js="clear">Clear game</button>
                 </div>
                 <div>
-                    <button class="addCart" data-js="addCart"><img class="cartIcon" src="./icons/shopping-cart-solid.svg">Add to cart</button>
+                    <button class="addCart" data-js="addCart"><img class="cartIcon" src="./icons/shopping-cart.png">Add to cart</button>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
                 <h3>CART <span data-js="total" style="font-style: normal; font-weight: lighter;"></span></h3>
             </div>
             <div class="btnArea">
-                <button class="saveCart"><i class="fas fa-shopping-cart"></i><strong>Save</strong></button>
+                <button class="saveCart" data-js="saveCart"><strong>Save</strong>➝</button>
             </div>
             
         </div>
